@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Getopt-Long
-version:      2.35_02
+version:      2.36
 version_from: 
 installdirs:  perl
 requires:
